Extended the pikchr wasm binding to make use of all of the pikchr() arguments and return more info in pikchr-worker's result. Fixed shift-enter behavior.
FossilOrigin-Name: 1dc34c9b61433ef9128c65c954de1eecdcd1510d05defb63de2e2ff40b056454

--- a/src/style.pikchrshow.css
+++ b/src/style.pikchrshow.css
@@ -189,7 +189,3 @@ span.labeled-input > *:nth-child(2) {
 #view-split > .fieldset.options {
   margin-top: 0.5em;
 }
-body.fossil-dark-style #pikchr-output svg {
-  /* Flip the colors to approximate a dark theme look */
-  filter: invert(1) hue-rotate(180deg);
-}
